--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,12 @@
   </dependencies>
   <build>
     <finalName>java-hello-world</finalName>
-    <plugin>
+   <plugins>
+     <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-war-plugin</artifactId>
     <version>3.3.2</version>
 </plugin>
+   </plugins>
   </build>
 </project>
